--- a/stable/linux-bfq-dev-git/PKGBUILD
+++ b/stable/linux-bfq-dev-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.9
 _srcname=linux
-pkgver=5.9.6.r0.g2d182f2dc3b7.ll35
+pkgver=5.9.6.r0.g2d182f2dc3b7
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
