--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.9
 _srcname=linux
-pkgver=5.9.6.r0.g2d182f2dc3b7.ll35
+pkgver=5.9.6.r0.g2d182f2dc3b7
 pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
