--- a/stable-rc/linux-bfq-dev-git/PKGBUILD
+++ b/stable-rc/linux-bfq-dev-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.10
 _srcname=linux-stable-rc
-pkgver=5.10.3.r718.g404b2e8f23fd
-pkgrel=0.2
+pkgver=5.10.4.r11.gbba563915bcc
+pkgrel=0
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -76,12 +76,11 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#br
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v3-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0002-Bluetooth-Fix-attempting-to-set-RPA-timeout-when-uns.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0003-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0004-drm-amd-display-Add-get_dig_frontend-implementation-.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0005-btrfs-Fix-500-2000-performance-regression-w-5.10.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0006-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0002-Bluetooth-Fix-attempting-to-set-RPA-timeout-when-uns.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0003-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0004-btrfs-Fix-500-2000-performance-regression-w-5.10.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0005-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
          # the main kernel config files
         'config')
 
@@ -335,10 +334,9 @@ sha512sums=('SKIP'
             '45fa721352143304eceff87649986fd42fcf4ae369f15ba704a435ab2f107dfe41c050eac25cd9167d2cc73d569aad8501cbd13477b62bad9724e4240f36ab15'
             'a920e67f590f07c2f3b0b51ce84fba8207465ff1341f636ea7ba1403e4f34d595ccaafb4215a88caccf8181975846eb5c993eb297f58c9669856552f216228e8'
             '34e21ecc4ef0d07707283427fa82d561a9573d670e80ccd41f7d9cb595473b3844b8df7aeffcb4fe82d9deeef0a4d4e6aef663eb1a7a397fa181f06f418a0d6d'
-            'b627c9cb440d3f356e8d1fcbd46512a2afe8076cf3df504f033250f52ba692802167f59addd1d05e58b5cf46bec5d22baf9b49aa049bfc3699580c1ac0af6485'
-            '3ee7b85a530e73ad12861c844a99304b615f032fe23bfff3fc576955535b4dc261aae2c9c343e157eb6dc70fbfd0299641c4d47b32592653d5e7afe285598128'
-            'f9caa104dabdfb6c49ce4368059d401ae2fa28ab37d08d8b45c06c5a95cdf77e17d5313bddfaf66bc62caa6524c4c090b9dd05adad31f877568a190c3a80bdad'
-            '45a14d082db128f32e08b4852715e2d6e8f3c7615b01c3b22af84e91189c55863a7070f33e33cf08a5f62180ae5536521011b338609457b3989fbbce419c11e8'
-            '30986ac777e7c413585b8a5a0f2db37578762f9b870cee097f414e9248e111fe65e16cdede04450f7533bc479ed4923f245c3128bef9f7f2de4d5c66c541f8a0'
-            'c2246d9b0fdf69115a0636be8783170aa1ec91d355002d7df5549c298c3707493a97c4fbe041bec283a911e88f3497fd4ad2c699c71df4d9bbe158cb57b0350c'
+            '9042a43ce455c33689819b9419c0d18b990a79e2e1c3bc161f83b6a5e39c23db662313d7792e498c872eb241d6cd4cb824ebad099f534bbfbe28893834a02eed'
+            'afe1ec5f094acd27c0f1716fe463998bf92a0e545210d8f0c60f4ea5eab69524659b6fb3869c38cfd7a9c44ecee3e7259cae7148deef9f4f75c38a8c59a2f044'
+            '2c5a8d3d1bf018ee595a935a8aec9f9051b960f76aa3409a09752e0d60479f91805254e6c1382fc055793585bcac2c5e9048dcf118d4b3a9a23676c8a1829e67'
+            '999ccb35e9004868dd5d75a91e24abb75c0aa86e1aaf9f3388e72531118bf281f7089255b1e38cb02b054e316782e5bc71f2c817c967c5b5fefc6ecbda825edc'
+            'b3c4bcaae676f6c81ecc735819b94e5f506d3be7f807a60df0c08febbeb0c8b8ca877c27773f246682f24e8eaaf32ba839bbba1f11b98468e76fd6ac659875c4'
             'd7ab6e5f8259f885f70d9ad1ab63fff8d0ab5d5542e677648b143542797f4b9e2e57505dc92608e6c15b4ed272e586908b56eefac63aa07fe396096fc6b22091')
