--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -47,10 +47,10 @@ _1k_HZ_ticks=
 
 pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
-_major=5.7
+_major=5.10
 _srcname=linux-stable-rc
-pkgver=5.7.13.r0.g7ea928a13ce5
-pkgrel=7
+pkgver=5.10.4.r11.gbba563915bcc
+pkgrel=0
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -61,18 +61,20 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _aufs_path="aufs-patches"
-_aufs_ver="20200622"
+_aufs_ver="20210104"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
-_gcc_path="cpu-patches-v2-sep"
+_gcc_path="cpu-patches-sep"
 _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-updates-v12-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-updates-v12-sep/0002-PCI-EDR-Log-only-ACPI_NOTIFY_DISCONNECT_RECOVER-even.patch"
-        "${_lucjanpath}/arch-updates-v12-sep/0003-virt-vbox-Add-support-for-the-new-VBG_IOCTL_ACQUIRE_.patch"
-        "${_lucjanpath}/docs-patches/0001-Documentation-Fix-sphinx-3.0-causes-compilation-erro.patch"
+        "${_lucjanpath}/arch-patches-v6-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v6-sep/0002-Bluetooth-Fix-attempting-to-set-RPA-timeout-when-uns.patch"
+        "${_lucjanpath}/arch-patches-v6-sep/0003-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
+        "${_lucjanpath}/arch-patches-v6-sep/0004-btrfs-Fix-500-2000-performance-regression-w-5.10.patch"
+        "${_lucjanpath}/arch-patches-v6-sep/0005-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
+        "${_lucjanpath}/arch-patches-v6-sep/0006-ALSA-hda-hdmi-fix-locking-in-silent_stream_disable.patch"
          # the main kernel config files
         'config')
 
@@ -315,10 +317,12 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'd383ff21c59aaccffbf9fac412495383118612ddbe6bf06691e2038d2b886754d2ba85b29f970f548103e1d0be519d114ba4641f29d329b604c7456db36ff193'
-            'ef8c9706da28eeaf98028609bf8ef6f558f7701f985c5925be6388dad0fbe8654fc15a803cd14f99ff89c026d471bbddbdff378b18db3f05f3d952faf943af72'
-            'b69b58856a2bdd62ea1a4ea7ce2932c6ed9ca9ec0b7796a13d4e051bb6c1d85bb576d651a7ae5b515e1226b524d4446c8d9c8f1d1c4b58ad982ae15d8cd7acbf'
-            'e8ce50a564c8412f3225c06eac4778f09a663c9ba05b5043916675934ab74a769cc91ef3f4162b73aa6854fceabb8e4d9c3143ebe105ce725fbac26df4044862'
-            'b9fd69758b1a5bdcf69d2b8d85d3acfaf20fe7e842e734ae03f4ab82a26743301336193db87b7e801636e487faceaf6eadc3bb5cecbb975d9a3afd9f9aa1851c'
-            '711ecce2ce54c81e8b60b9b347cb88db054bf697396ee15e9b425671f88d22a14dae17c1c451aa10bd1d7a71c145b2fa588863205ec94e1439ed9b2769ee2e4c'
-            'ff8cfc20896c889c9689f04f7b16db94a762fc74902c7f68f36795142a92a27ba9521ec8e78778b4e506fb7beccf18e7adc0504e90638d51301d2e82ce71c567')
+            '17c3a747e25b99aaf9640f60e216f31420062cea29081f404217cbccd59f3acd4545a3900d911b8c68da98dab6e1743502dae069cc2f04a8ecab85c966b1b902'
+            '34e21ecc4ef0d07707283427fa82d561a9573d670e80ccd41f7d9cb595473b3844b8df7aeffcb4fe82d9deeef0a4d4e6aef663eb1a7a397fa181f06f418a0d6d'
+            '99b3123cbb6e9b8054ac7dab7d17155e32fc4b063e78813db756b34922185725daeb2e7ff34c1a0e7a818d1b1489e4e4d383e91677288b31f11f89eb3bc45f5a'
+            '5f93505ae3330eafab409ac95adf06af7ab1e5bb8e44e63d046bae8f03471f3ee793acd8d348ebf74a09caae4bec637ee9dc21493b66f39a9540229c9a1b6bbc'
+            '5885590429ae3da0b073fb26a0eedda1112026aa8e3b2cfa7b1ab55289848f62f8d37481ab00b42662f299d3db65e38ec593f706b34780647b09744b633874e1'
+            '537745dc44956d38d58807ef0ebf4ca834c362b56f8b2f6d347c559f22867524f1b98cbb8ef10acfccaf27c4973bf1fc28174a0051124cf502f5e165c3a1f462'
+            '6decaaf8188a4bf3907485496e0cfcf66b50785a2fc55223f3dec3114e4c0218ce5a48827a7c392d6f11108086be057195a9ced375ee4fbafe2a021e470cd6bf'
+            '503f4de88c077419210c16e3e9877cab1fd35374e97ff6e58932dc6be0d69dc633e3648cad2aaa839e1534ac37a254c4466ea06d7d99056208ce5a21f13bacd7'
+            '6b2e80f643228ce5afbb7847394f2e9151822758535e00411e50542fae16ab20af336a9d83ddc7586ea83dff2e9c6b7e7f6a028a970c9d62051ba503d1531168')
