--- a/rolling/linux-aufs-git/PKGBUILD
+++ b/rolling/linux-aufs-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-aufs-git
 _major=5.10
 _srcname=linux
 pkgver=5.10.4.r9483.g03972277a157
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -60,7 +60,7 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
              'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
-_aufs_path="aufs-patches"
+_aufs_path="aufs-nodocs-patches"
 _aufs_ver="20210104"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _gcc_path="cpu-patches-sep"
@@ -318,7 +318,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '17c3a747e25b99aaf9640f60e216f31420062cea29081f404217cbccd59f3acd4545a3900d911b8c68da98dab6e1743502dae069cc2f04a8ecab85c966b1b902'
+            'b5415d6a769b3a14b4540d1177512e9b60886b13a82045de363e4878640cf6ac598149a521e2ea487436bd454cf8509cf215e09d2b932fc75b392025b1646ef2'
             '34e21ecc4ef0d07707283427fa82d561a9573d670e80ccd41f7d9cb595473b3844b8df7aeffcb4fe82d9deeef0a4d4e6aef663eb1a7a397fa181f06f418a0d6d'
             '27e6c0670ece86c77bf8068b892eac4ea332c809eba08ec45e13f12d89a708e5a2452f61b9395706b08fea4f2c4ecf8ecdac2ee4f953669a3f4f7a652f85de63'
             'df8d800e043ffd7cd57a7b3efffdf30ba9f9130134fcc50f6b8a188665d28bdfac3d3b44a786b8aa1fc1bd92f508f5e350d480eccb5433f29a7bdbd45d488ec9'
