--- a/rolling/linux-bfq-dev-git/PKGBUILD
+++ b/rolling/linux-bfq-dev-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.10
 _srcname=linux
-pkgver=5.10.10.r9489.ga1255ad4c213
-pkgrel=2
+pkgver=5.10.12.r9491.g259c381924ef
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -76,10 +76,9 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#br
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v11-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v11-sep/0002-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
-        "${_lucjanpath}/arch-patches-v11-sep/0003-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
-        "${_lucjanpath}/arch-patches-v11-sep/0004-HID-wacom-Correct-NULL-dereference-on-AES-pen-proxim.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0002-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0003-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
          # the main kernel config files
         'config')
 
@@ -333,8 +332,7 @@ sha512sums=('SKIP'
             '45fa721352143304eceff87649986fd42fcf4ae369f15ba704a435ab2f107dfe41c050eac25cd9167d2cc73d569aad8501cbd13477b62bad9724e4240f36ab15'
             'e0884e690c382e5411a6419054c380c2e7432a99789afd243aa1da6911fe875c5a5bb2aa14a79a5304805ab46aa61b7372f8649e12a0b5ca80fd07f7f023c7b5'
             '34e21ecc4ef0d07707283427fa82d561a9573d670e80ccd41f7d9cb595473b3844b8df7aeffcb4fe82d9deeef0a4d4e6aef663eb1a7a397fa181f06f418a0d6d'
-            '06e23fb8828e70c5a30b11d99ae6b12db5bde1872457f58c736f2dd7d6985cc9bb87cf93ebf5278899bdfe867c527fdab0fa8dc649e6a8f4048104390e8ff6be'
-            '9a7ba4cb520eb40605b650609cdc58fe4dc353339311ca5dac9b6e0b694ce939b76a0e6d6f541f9c998d1766c8c887a927683b3fb02254454f0357bdc5c490ec'
-            'ee38aa7f8348fa4f772059fdad24ff6bbfcb9b0552e94f9893fd0af913e1471ae01e22c572ab9b027d3894b14d223d7055d29d1b0d38e32e9563d6df7d58b8bb'
-            '116c7280a42847c5959aa734490eb6e59cdb61168b49f10bf5474ba76268a09473bc00f7c881157de1a39f9a1bc73c303ac3e271683db587fe57698dfeb8e364'
+            'f13f34833ab5c7c2239c94e1a6a491db450e8db09a124a2dbd99a7ec613e7e894a76d649b69915a7c4550c193ddf60c1fb762c5a16e9047602fba768d4b412da'
+            '57b805336e6bfad046c341426b7186ab055fcb146b6dc9c5e36ce36e011528e8e239bed4f654372fddfbdd44ce95d7332d574e1ac38b7cabb0aa0acff522a1fa'
+            'c0162404599999d9bbc5916ac51946ac34c786f1190ae802addef017b1fa8cc3315af56d4fa29e5b63d8fc74fc53a5b6a6b6eb51984864d5f54d3b563d49e903'
             'dc094eb861d065a20c0bbe7a0c60d0ea126f283671bd0cc06c72d176095eb26a040455d0b2b225c0e7adaa22d29dd322955a6089c6bbe6deb57e4d0e16c8c320')
