--- a/stable-rc/linux-bfq-dev-git/PKGBUILD
+++ b/stable-rc/linux-bfq-dev-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.11
 _srcname=linux-stable-rc
-pkgver=5.11.2.r23.gaf8b34a455f5
+pkgver=5.11.2.r776.g4e6ab2386937
 pkgrel=0
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
